--- a/BmsWpf/Views/ChildWindows/MainCalendarEvents.xaml
+++ b/BmsWpf/Views/ChildWindows/MainCalendarEvents.xaml
@@ -17,13 +17,13 @@
     </intr:Interaction.Triggers>
     <Grid Height="850" Width="750" Background="#2e3137">
         <Calendar VerticalAlignment="Top" HorizontalAlignment="Left" Margin="28,48,0,0" Height="166" Width="180" Grid.ColumnSpan="2"></Calendar>
-        <Button Name ="BackButton" Command="{Binding Back}"  Content="Back" Background="AliceBlue" Height="50" Width="180" Margin="28,741,542,59"/>
+        <Button Name ="BackButton" Command="{Binding Back}"  Content="Back" Background="AliceBlue" Height="50" Width="180" Margin="507,746,63,54"/>
         <Button Name="AddEventButton" Content="Add new event" Command="{Binding AddNew}" Background="AliceBlue" Height="50" Width="180" Margin="28,518,542,282"/>
         <Button Name="EditEventButton" Content="Edit event" Command="{Binding Edit}" Background="AliceBlue" Height="50" Width="180" Margin="28,573,542,227" RenderTransformOrigin="0.503,0.266"/>
         <Button Name="DeleteEventButton" Content="Delete event" Command="{Binding Delete}" Background="AliceBlue" Height="50" Width="180" Margin="28,629,542,171"/>
 
         <DataGrid Name="EventsDataGrid" 
-                  Background="AntiqueWhite" 
+                  Background="AliceBlue" 
                   HorizontalAlignment="Right" Height="630" 
                   Margin="0,48,63,0" VerticalAlignment="Top" 
                   Width="428" VerticalScrollBarVisibility="Auto" 
@@ -38,7 +38,7 @@
             </intr:Interaction.Triggers>
         </DataGrid>
 
-        <Label Name="timeView" HorizontalAlignment="Left" Margin="194.566,14,0,0" VerticalAlignment="Top" FontSize="16" Width="304" Foreground="White" Height="29" Grid.Column="1"/>
+        <Label Name="timeView" HorizontalAlignment="Left" Margin="259,14,0,0" VerticalAlignment="Top" FontSize="16" Width="428" Foreground="White" Height="29"/>
         <Label Content="Events for:" Foreground="White" FontSize="18" HorizontalAlignment="Left" Margin="70.566,14,0,0" VerticalAlignment="Top" Width="100" Grid.Column="1"/>
     </Grid>
 
